deployment-scripts/uat_deployment/deployment_release_uat.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-application
  namespace: uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: hello-world
        image: 409893854103.dkr.ecr.us-east-1.amazonaws.com/demo-pipeline:release
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata: 
  name: helloworld-application
  namespace: uat
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    nodePort: 0
  type: NodePort
