deployment-scripts/uat_deployment/ingress-hellouat.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellouat-ingress
  namespace: uat
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
        - path: /hellouat
          backend:
            serviceName: helloworld-application
            servicePort: 80
